best-practices/require_pod_requests_limits/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../require_pod_requests_limits.yaml
assert:
- policy-assert.yaml
