best-practices/require_pod_requests_limits/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' require_pod_requests_limits.yaml | kubectl create -f -
