best-practices/require_pod_requests_limits/e2e/04-manifests.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: good-pods.yaml
  shouldFail: false
- file: good-podcontrollers.yaml
  shouldFail: false
- file: bad-pod-nolimit.yaml
  shouldFail: true
- file: bad-pod-nores.yaml
  shouldFail: true
- file: bad-pod-nothing.yaml
  shouldFail: true
- file: bad-podcontrollers.yaml
  shouldFail: true
