best-practices/require_pod_requests_limits/e2e/03-enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests-limits
spec:
  validationFailureAction: enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
